add start button

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                   </td>
                   <td>
                       <div id="PieChart"></div>   
-                  </td>  
+                  </td>
+                  
               </tr>
           </table>
       </div>    
@@ -204,6 +205,9 @@
                           <td class="LiftKit-main-datalabel-leftbold">
                               <div>Program:</div>
                           </td>
+                          <td>
+                                    <div id="Start_Program_Button"> </div>
+                                </td>
                           <td>
                               <div id="Stop_Program_Button"> </div>
                           </td>
