--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <!-- Section to the right for the picture -->
       <div id="LiftKit-main-grid-area-picture">
-          <img id="RobotImage" src="GoFa1500.png"
+          <img id="RobotImage" src="FOTOINICIO.jpg"
               style="display: block; margin-left: auto; margin-right: auto; margin-top: 0%; max-height: 300px; max-width: 99%;" />
       </div>
   </div>
